Qodana 보고서 기반 리팩토링